--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   get_it: ^6.0.0
   get_it_hooks: ^2.0.0
   flutter_hooks: ^0.16.0
+  google_maps_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
