--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_hooks: ^0.16.0
   google_maps_flutter: ^2.1.0
   geolocator: ^7.7.1
+  material_floating_search_bar: ^0.3.6
 
 dev_dependencies:
   flutter_test:
