--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_maps_flutter: ^2.1.0
   geolocator: ^7.7.1
   material_floating_search_bar: ^0.3.6
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
