--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,20 @@ dependencies:
   uuid: ^3.0.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: launcher_icon
+  adaptive_icon_background: "#181A20"
+  adaptive_icon_foreground: assets/icon/Maply-Foreground.png
+  ios: true
+  remove_alpha_ios: true
+  image_path: assets/icon/MAply.png
 
 flutter:
   uses-material-design: true
   fonts:
       - family: Comfortaa
         fonts:
-          - asset: fonts/Comfortaa.ttf
+          - asset: assets/font/Comfortaa.ttf
